Refactored partial to remove instance variables and replaced with local  one for a DRY-er code

--- a/app/views/object_records/_search_result.erb
+++ b/app/views/object_records/_search_result.erb
@@ -13,11 +13,11 @@
 		
 	  <tbody>
 		<tr>
-		  <% if @object_record %>
-	      <td><%= @object_record.object_id %></td>
-	      <td><%= @object_record.object_type %></td>
-	      <td><%= pretty_date_format(@object_record.timestamp) %></td>
-	      <td><%= @merged_properties %></td>
+		  <% if object_record %>
+	      <td><%= object_record.object_id %></td>
+	      <td><%= object_record.object_type %></td>
+	      <td><%= pretty_date_format(object_record.timestamp) %></td>
+	      <td><%= merged_properties %></td>
 	      <% else %>
 	      <td>No Data Available<td>
 	      <% end %>
